# Medical-RAG-System

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  docker-compose.yml  pyproject.toml  rag_cli.py  temp_analyze.py  test_llm.py
_scripts/: gen_entries.py  generate_high_risk_dataset.py
app/: main.py
app/api/: deps.py
app/core/: cache.py  confidence.py  database.py  gpu_memory_manager.py  metrics.py  rag_engine.py  safety.py
app/models/: database.py  schemas.py
app/services/: citation_verifier.py  consistency.py  document.py  document_processor.py  document_store.py  retrieval_indexer.py  session.py
config/: config.yaml  settings.py
docs/: core-contribution-code.md  thesis-appendix.md
docs/detail-design/: 01-architecture-overview.md  02-rag-pipeline.md  03-document-processing.md  04-retrieval-system.md  05-session-management.md  06-data-models.md  07-configuration.md  08-gpu-memory-management.md  09-query-type-detection.md  10-citation-verification.md  11-evaluation-system.md  README.md  api-endpoints.md
docs/requirement/: data-flow.md  medical-rag-spec.md  medical-rag.md
rag/chunking/: chunker.py  hierarchical_chunker.py  semantic_chunker.py
rag/evaluation/: __init__.py  benchmark_runner.py  cli.py  dataset_manager.py  evaluator.py  generation_eval.py  interfaces.py  medical_safety_eval.py  reporter.py  retrieval_eval.py  synthetic_generator.py
rag/generation/: citation_extractor.py  llm_generator.py  prompt.py  prompt_builder.py  warnings_generator.py
rag/parser/: __init__.py  base.py  markdown_parser.py
rag/reranker/: cross_encoder.py
rag/retrieval/: base.py  bm25_retriever.py  hybrid_retriever.py  query_boosting.py  vector_retriever.py
scripts/: generate_eval_dataset.py  init_db.py  init_qdrant.py  run_full_evaluation.py
streamlit_app/: app.py
streamlit_app/components/: chat.py  chat_message.py  document_card.py  document_list.py  source_display.py
streamlit_app/pages/: chat.py  documents.py  evaluation.py  history.py  query.py
tests/evaluation/: test_benchmark_runner.py  test_dataset_manager.py  test_generation_eval.py  test_medical_safety.py  test_ragevaluator.py  test_retrieval_eval.py
tests/integration/: test_api.py  test_document_delete.py  test_full_pipeline.py
tests/unit/: test_cache.py  test_citation_verifier.py  test_confidence.py  test_cross_encoder.py  test_document_management.py  test_document_service.py  test_hierarchical_chunker.py  test_hybrid_retriever.py  test_llm_generator.py  test_metrics.py  test_parser.py  (+8 more)
(+16 files in other folders)
