[project]
name = "medical-rag"
version = "1.0.0"
description = "Medical Knowledge Base RAG Q&A System"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi[standard]>=0.136.0",
    "uvicorn[standard]>=0.46.0",
    "python-multipart>=0.0.27",
    # Data validation
    "pydantic>=2.13.0",
    "pydantic-settings>=2.10.0",
    # Database
    "sqlalchemy>=2.0.44",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.12",
    "alembic>=1.16.5",
    # Vector database
    "qdrant-client>=1.17.0",
    # Redis (with built-in asyncio support, replaces aioredis)
    "redis>=6.1.0",
    # RAG framework
    "llama-index>=0.14.21",
    "llama-index-core>=0.14.21",
    "llama-index-postprocessor-cohere-rerank>=0.3.0",
    # Embedding & Reranker
    "sentence-transformers>=5.4.0",
    "torch>=2.11.0",
    "FlagEmbedding>=1.3.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    # LLM
    "openai>=2.16.0",
    # Document parsing
    "pymupdf4llm>=1.27.2.3",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "markdown>=3.10.2",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.1",
    # Configuration
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.2",
    # Utilities
    "python-jose[cryptography]>=3.5.0",
    "libpass>=1.7.5",          # maintained fork of deprecated passlib
    "httpx>=0.28.1",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    # Streamlit
    "streamlit>=1.57.0",
    "streamlit-option-menu>=0.3.12",
    # Testing
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
    # Logging
    "loguru>=0.7.3",
    # Observability
    "prometheus-client>=0.25.0",
    "slowapi>=0.1.9",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "isort>=5.13.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "rag*", "config*", "streamlit_app*"]
exclude = ["tests*", "scripts*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
